--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <h3>Les Débouchés</h3>
       <ul>
         <li><a onclick="SwitchTab(event, 'EcolesIngesTab')">Les écoles d'ingénieur</a></li>
-        <li>Les licences
-          <ul>
+        <li><span class="menu_deroulant">Les licences</span>
+          <ul class="imbrication">
             <li><a href="https://diplomeo.com/licence-informatique">Licence informatique</a></li>
-            <li>Licence pro métiers de l'informatique
-              <ul>
+            <li><span class="menu_deroulant">Licence pro métiers de l'informatique</span>
+              <ul class="imbrication">
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sécurité des systèmes et des réseaux</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, développement et test de logiciels</a></li>
@@ -52,8 +52,8 @@
               </ul>
             </li>
           </ul>
-          <li>Les écoles d'informatique
-            <ul>
+          <li><span class="menu_deroulant">Les écoles d'informatique</span>
+            <ul class="imbrication">
               <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
@@ -397,6 +397,6 @@
 <script src="./script/cssmode.js"></script>
 <script src="./script/geolocation.js"></script>
 <script src="./script/tabs.js"></script>
-
+<script src="script/menuderoulant.js"></script>
 
 </html>
