--- a/index_template.html
+++ b/index_template.html
@@ -71,7 +71,7 @@
         <div class="slider round"></div>
       </label>
       </div>
-      {% for (desc, adresse, tel, date_lim, image, nom) in infos %}
+      {% for (desc, adresse, tel, date_lim, image, adresse_site, nom) in infos %}
       <section class="responsive">
         <img src="{{image}}" alt="">
         <section>
@@ -81,7 +81,7 @@
           <p>Tel. {{tel}}</p>
           <p>Date limite d'inscription: {{date_lim}}</p>
           <p class="distance"></p>
-          <a href="#" class="bouttonplus">En savoir plus</a>
+          <a href="{{adresse_site}}" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       {% endfor %}
