--- a/index_template.html
+++ b/index_template.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./style/footer.css">
   <link rel="stylesheet" href="./style/index.css">
   <link rel="stylesheet" href="./style/dark.css" id="pagestyle">
+  <link rel="icon" href="logobROUND.png">
 </head>
 
 <body>
@@ -72,15 +73,15 @@
       </label>
       </div>
       {% for (desc, adresse, tel, date_lim, image, adresse_site, nom) in infos %}
-      <section class="responsive">
-        <img src="{{image}}" alt="">
+      <section class="responsive" id="{{nom}}">
+        <img src="{{image}}" alt="{{nom}}">
         <section>
           <h2>{{nom}}</h2>
           <p>{{desc}}</p>
           <p>{{adresse}}</p>
           <p>Tel. {{tel}}</p>
           <p>Date limite d'inscription: {{date_lim}}</p>
-          <p class="distance"></p>
+          <p class="distance"> </p>
           <a href="{{adresse_site}}" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
