--- a/index_template.html
+++ b/index_template.html
@@ -20,7 +20,7 @@
   <header class="navbar">
     <a href="#" class="">
       <img src="./logob.png" alt="icone">
-      <h1>Le nom</h1>
+      <h1>PPP \ Ingénieur</h1>
     </a>
     <label class="switch">
       <input type="checkbox" name="Dark Mode" id="toggle" checked onclick="ChangeCSS()">
@@ -31,7 +31,7 @@
     <section>
       <header>
         <h2>Après un DUT, une école d'ingé ?!</h2>
-        <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
+        <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous via le slider juste en dessous !</p>
         <button class="tablinks" onclick="SwitchTab(event, 'EcolesIngesTab')" id="DefaultTab">Écoles d'ingénieurs</button>
         <button class="tablinks" onclick="SwitchTab(event, 'DebouchesTab')">Débouchés</button>
       </header>
@@ -77,7 +77,7 @@
         <img src="{{image}}" alt="{{nom}}">
         <section>
           <h2>{{nom}}</h2>
-          <p>{{desc}}</p>
+          <h3>{{desc}}</h3>
           <p>{{adresse}}</p>
           <p>Tel. {{tel}}</p>
           <p>Date limite d'inscription: {{date_lim}}</p>
@@ -91,13 +91,13 @@
   <footer>
     <section class="apropos">
       <h2>À Propos</h2>
-      <p>Cette page a été créée dans le cadre de la création d'une page web pouvant fournir les informations nécessaires à des étudiants possedant un DUT informatique de trouver la meilleur écoles d'ingénieur selon leur localisation ou le classement de celle-ci</p>
+      <p>Cette page a été créée dans le cadre de la création d'une page web pouvant fournir les informations nécessaires à des étudiants possedant un DUT informatique de trouver la meilleur écoles d'ingénieur selon la pertinance ou leur localisation</p>
     </section>
     <section class="contact">
       <h2>Contact</h2>
       <ul>
-        <li><a href="#">Site de l'IUT></a></li>
-        <li><a href="#">Site de l'université></a></li>
+        <li><a href="http://www.univ-orleans.fr/fr/iut-orleans">Site de l'IUT></a></li>
+        <li><a href="http://www.univ-orleans.fr/fr">Site de l'université></a></li>
       </ul>
     </section>
   </footer>
