--- a/index_template.html
+++ b/index_template.html
@@ -45,20 +45,17 @@
             <li><a href="https://diplomeo.com/licence-informatique">Licence informatique</a></li>
             <li><span class="menu_deroulant">Licence pro métiers de l'informatique</span>
               <ul class="imbrication">
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sécurité des systèmes et des réseaux</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, développement et test de logiciels</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conduite-de-projets">Conduite de projets</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">Systèmes d'information et gestion de données</a></li>
+                {% for (site, nom) in infos_licence_pro %}
+                <li><a href="{{site}}">{{nom}}</a></li>
+                {% endfor %}
               </ul>
             </li>
           </ul>
           <li><span class="menu_deroulant">Les écoles d'informatique</span>
             <ul class="imbrication">
-              <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
-              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
-              <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
-              <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
+              {% for (site, nom) in infos_ecoles_info %}
+              <li><a href="{{site}}">{{nom}}</a></li>
+              {% endfor %}
             </ul>
           </li>
           <li>Entrer dans la vie active</li>
@@ -72,7 +69,7 @@
         <div class="slider round"></div>
       </label>
       </div>
-      {% for (desc, adresse, tel, date_lim, image, adresse_site, nom) in infos %}
+      {% for (desc, adresse, tel, date_lim, image, adresse_site, nom) in infos_ecole_inge %}
       <section class="responsive" id="{{nom}}">
         <img src="{{image}}" alt="{{nom}}">
         <section>
