--- a/index_template.html
+++ b/index_template.html
@@ -71,7 +71,7 @@
       </div>
       {% for (desc, adresse, tel, date_lim, image, adresse_site, nom) in infos_ecole_inge %}
       <section class="responsive" id="{{nom}}">
-        <img src="{{image}}" alt="{{nom}}">
+        <img src="#" alt="{{nom}}">
         <section>
           <h2>{{nom}}</h2>
           <h3>{{desc}}</h3>
