--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </label>
       </div>
             <section class="responsive" id="Ensimag">
-        <img src="#" alt="Ensimag">
+        <img src="./img/ensimag.jpg" alt="Ensimag">
         <section>
           <h2>Ensimag</h2>
           <h3>Grande école publique d'ingénieurs en informatique et mathématiques appliquées de Grenoble</h3>
@@ -85,7 +85,7 @@
         </section>
       </section>
             <section class="responsive" id="Ecole 42">
-        <img src="#" alt="Ecole 42">
+        <img src="./img/42.jpg" alt="Ecole 42">
         <section>
           <h2>Ecole 42</h2>
           <h3>Formation de développeurs informatiques</h3>
@@ -97,7 +97,7 @@
         </section>
       </section>
             <section class="responsive" id="Ecole normale supérieure">
-        <img src="#" alt="Ecole normale supérieure">
+        <img src="./img/ens.jpg" alt="Ecole normale supérieure">
         <section>
           <h2>Ecole normale supérieure</h2>
           <h3>Informatique</h3>
@@ -109,7 +109,7 @@
         </section>
       </section>
             <section class="responsive" id="Insa Toulouse">
-        <img src="#" alt="Insa Toulouse">
+        <img src="./img/insa_toulouse.jpg" alt="Insa Toulouse">
         <section>
           <h2>Insa Toulouse</h2>
           <h3>Informatique et Réseaux</h3>
@@ -121,7 +121,7 @@
         </section>
       </section>
             <section class="responsive" id="ENSEEIHT">
-        <img src="#" alt="ENSEEIHT">
+        <img src="./img/enseeiht.jpg" alt="ENSEEIHT">
         <section>
           <h2>ENSEEIHT</h2>
           <h3>Informatique et de mathématiques appliquées</h3>
@@ -133,7 +133,7 @@
         </section>
       </section>
             <section class="responsive" id="Centrale Supélec">
-        <img src="#" alt="Centrale Supélec">
+        <img src="./img/supelec.jpg" alt="Centrale Supélec">
         <section>
           <h2>Centrale Supélec</h2>
           <h3>Informatique et de mathématiques appliquées</h3>
@@ -145,7 +145,7 @@
         </section>
       </section>
             <section class="responsive" id="Université Pierre et Marie Curie">
-        <img src="#" alt="Université Pierre et Marie Curie">
+        <img src="./img/univ_curie.jpg" alt="Université Pierre et Marie Curie">
         <section>
           <h2>Université Pierre et Marie Curie</h2>
           <h3>Informatique et de mathématiques appliquées</h3>
@@ -157,7 +157,7 @@
         </section>
       </section>
             <section class="responsive" id="Télécom-Paristech">
-        <img src="#" alt="Télécom-Paristech">
+        <img src="./img/telecom_paristech.jpeg" alt="Télécom-Paristech">
         <section>
           <h2>Télécom-Paristech</h2>
           <h3>Informatique et réseaux</h3>
@@ -169,7 +169,7 @@
         </section>
       </section>
             <section class="responsive" id="Isima">
-        <img src="#" alt="Isima">
+        <img src="./img/isima.jpg" alt="Isima">
         <section>
           <h2>Isima</h2>
           <h3>Informatique des systèmes embarqués et Génie logiciel et Systèmes informatiques et Systèmes d’information et Aide à la décision et Modélisation mathématique et Science des données et Réseaux et sécurité informatique</h3>
@@ -181,7 +181,7 @@
         </section>
       </section>
             <section class="responsive" id="Université Paul Sabatier">
-        <img src="#" alt="Université Paul Sabatier">
+        <img src="./img/univ_paul_sabatier.jpg" alt="Université Paul Sabatier">
         <section>
           <h2>Université Paul Sabatier</h2>
           <h3>Informatique et de mathématiques appliquées</h3>
@@ -193,7 +193,7 @@
         </section>
       </section>
             <section class="responsive" id="Télécom Nancy">
-        <img src="#" alt="Télécom Nancy">
+        <img src="./img/telecom_nancy.jpg" alt="Télécom Nancy">
         <section>
           <h2>Télécom Nancy</h2>
           <h3>Big DATA, IoT, Cyber Sécurité, IA, Réalité Virtuelle, Cloud</h3>
@@ -205,7 +205,7 @@
         </section>
       </section>
             <section class="responsive" id="Epita">
-        <img src="#" alt="Epita">
+        <img src="./img/epita.jpg" alt="Epita">
         <section>
           <h2>Epita</h2>
           <h3>Système et Réseaux et Développement, Programmation et lot</h3>
@@ -217,7 +217,7 @@
         </section>
       </section>
             <section class="responsive" id="Isae - Supaéro">
-        <img src="#" alt="Isae - Supaéro">
+        <img src="./img/isae_supaero.jpg" alt="Isae - Supaéro">
         <section>
           <h2>Isae - Supaéro</h2>
           <h3>Informatique</h3>
@@ -229,7 +229,7 @@
         </section>
       </section>
             <section class="responsive" id="Insa Lyon">
-        <img src="#" alt="Insa Lyon">
+        <img src="./img/insa.jpg" alt="Insa Lyon">
         <section>
           <h2>Insa Lyon</h2>
           <h3>Informatique, Système et Réseaux, Mathématiques appliquées</h3>
@@ -241,7 +241,7 @@
         </section>
       </section>
             <section class="responsive" id="ENSIIE">
-        <img src="#" alt="ENSIIE">
+        <img src="./img/ensiie.gif" alt="ENSIIE">
         <section>
           <h2>ENSIIE</h2>
           <h3>Informatique</h3>
@@ -253,7 +253,7 @@
         </section>
       </section>
             <section class="responsive" id="Université Paris Sud">
-        <img src="#" alt="Université Paris Sud">
+        <img src="./img/univ_parissud.jpg" alt="Université Paris Sud">
         <section>
           <h2>Université Paris Sud</h2>
           <h3>Informatique</h3>
@@ -265,7 +265,7 @@
         </section>
       </section>
             <section class="responsive" id="Efrei">
-        <img src="#" alt="Efrei">
+        <img src="./img/efrei.jpg" alt="Efrei">
         <section>
           <h2>Efrei</h2>
           <h3>Informatique</h3>
@@ -277,7 +277,7 @@
         </section>
       </section>
             <section class="responsive" id="Enseirb-Matmeca">
-        <img src="#" alt="Enseirb-Matmeca">
+        <img src="./img/academie_bordeaux.jpg" alt="Enseirb-Matmeca">
         <section>
           <h2>Enseirb-Matmeca</h2>
           <h3>Calcul intensif et sciences de données, robotique et apprentissage, intelligence artificielle, génie logiciel et cybersécurité</h3>
@@ -289,7 +289,7 @@
         </section>
       </section>
             <section class="responsive" id="Université Claude Bernard">
-        <img src="#" alt="Université Claude Bernard">
+        <img src="./img/univ_claude_bernard.jpg" alt="Université Claude Bernard">
         <section>
           <h2>Université Claude Bernard</h2>
           <h3>Informatique</h3>
@@ -301,7 +301,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Lille">
-        <img src="#" alt="Polytech Lille">
+        <img src="./img/poly_lille.jpeg" alt="Polytech Lille">
         <section>
           <h2>Polytech Lille</h2>
           <h3>Informatique microélectronique automatique et Génie informatique et statistique</h3>
@@ -313,7 +313,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Sorbonne">
-        <img src="#" alt="Polytech Sorbonne">
+        <img src="./img/poly_sorbonne.jpg" alt="Polytech Sorbonne">
         <section>
           <h2>Polytech Sorbonne</h2>
           <h3>Electronique et informatique, Mathématiques appliquées et informatique</h3>
@@ -325,7 +325,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Paris-Sud">
-        <img src="#" alt="Polytech Paris-Sud">
+        <img src="./img/poly_parissud.jpeg" alt="Polytech Paris-Sud">
         <section>
           <h2>Polytech Paris-Sud</h2>
           <h3>Electronique et systèmes robotisés, Informatique et Photonique et systèmes optroniques</h3>
@@ -337,7 +337,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Nancy">
-        <img src="#" alt="Polytech Nancy">
+        <img src="./img/poly_nancy.jpg" alt="Polytech Nancy">
         <section>
           <h2>Polytech Nancy</h2>
           <h3>Ingénierie de l’Information et des Systèmes et Internet Industriel</h3>
@@ -349,7 +349,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Orleans">
-        <img src="#" alt="Polytech Orleans">
+        <img src="./img/poly_orleans.jpg" alt="Polytech Orleans">
         <section>
           <h2>Polytech Orleans</h2>
           <h3>Ingénierie de l’Information et des Systèmes et Internet Industriel</h3>
@@ -361,7 +361,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Tours">
-        <img src="#" alt="Polytech Tours">
+        <img src="./img/poly_tours.jpg" alt="Polytech Tours">
         <section>
           <h2>Polytech Tours</h2>
           <h3>Informatique, Internet Industriel</h3>
@@ -373,7 +373,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Angers">
-        <img src="#" alt="Polytech Angers">
+        <img src="./img/poly_angers.jpg" alt="Polytech Angers">
         <section>
           <h2>Polytech Angers</h2>
           <h3>Systèmes automatisés et génie informatique</h3>
@@ -385,7 +385,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Nantes">
-        <img src="#" alt="Polytech Nantes">
+        <img src="./img/poly_nantes.jpg" alt="Polytech Nantes">
         <section>
           <h2>Polytech Nantes</h2>
           <h3>Informatique</h3>
@@ -397,7 +397,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Lyon">
-        <img src="#" alt="Polytech Lyon">
+        <img src="./img/poly_lyon.jpg" alt="Polytech Lyon">
         <section>
           <h2>Polytech Lyon</h2>
           <h3>Informatique</h3>
@@ -409,7 +409,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Clermont-Ferrand">
-        <img src="#" alt="Polytech Clermont-Ferrand">
+        <img src="./img/poly_clermont.jpg" alt="Polytech Clermont-Ferrand">
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
           <h3>Génie mathématique et modélisation</h3>
@@ -421,7 +421,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Annecy-Chambéry">
-        <img src="#" alt="Polytech Annecy-Chambéry">
+        <img src="./img/poly_annecy.jpg" alt="Polytech Annecy-Chambéry">
         <section>
           <h2>Polytech Annecy-Chambéry</h2>
           <h3>Informatique, Données, Usages, Instrumentation - Automatique - Informatique</h3>
@@ -433,7 +433,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Grenoble">
-        <img src="#" alt="Polytech Grenoble">
+        <img src="./img/poly_grenoble.jpg" alt="Polytech Grenoble">
         <section>
           <h2>Polytech Grenoble</h2>
           <h3>Informatique et Informatique et Electronique des Systèmes Embarqués</h3>
@@ -445,7 +445,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Montpellier">
-        <img src="#" alt="Polytech Montpellier">
+        <img src="./img/poly_montpellier.jpg" alt="Polytech Montpellier">
         <section>
           <h2>Polytech Montpellier</h2>
           <h3>Informatique et gestion et Systèmes embarqués</h3>
@@ -457,7 +457,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Nice Sophia">
-        <img src="#" alt="Polytech Nice Sophia">
+        <img src="./img/poly_nice.jpeg" alt="Polytech Nice Sophia">
         <section>
           <h2>Polytech Nice Sophia</h2>
           <h3>Informatique et Informatique par apprentissage</h3>
@@ -469,7 +469,7 @@
         </section>
       </section>
             <section class="responsive" id="Polytech Marseille">
-        <img src="#" alt="Polytech Marseille">
+        <img src="./img/poly_marseille.png" alt="Polytech Marseille">
         <section>
           <h2>Polytech Marseille</h2>
           <h3>Informatique et Génie industriel et informatique</h3>
