fix des erreurs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </header>
     </section>
     <article id="DebouchesTab" class="tabcontent">
-      <h3>Les Débouchés</h3>
+      <h2>Les Débouchés</h2>
       <ul>
         <li><a onclick="SwitchTab(event, 'EcolesIngesTab')">Les écoles d'ingénieur</a></li>
         <li><span class="menu_deroulant">Les licences</span>
@@ -54,15 +54,14 @@
             </li>
           </ul>
           <li><span class="menu_deroulant">Les écoles d'informatique</span>
-            <ul class="imbrication">
-                            <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
-                            <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
-                            <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
-                            <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
-                          </ul>
-          </li>
-          <li>Entrer dans la vie active</li>
+          <ul class="imbrication">
+                        <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
+                        <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
+                        <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
+                        <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
+                      </ul>
         </li>
+        <li>Entrer dans la vie active</li>
       </ul>
     </article>
     <article id="EcolesIngesTab" class="tabcontent">
@@ -84,7 +83,7 @@
           <a href="http://ensimag.grenoble-inp.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Ecole 42">
+            <section class="responsive" id="Ecole_42">
         <img src="./img/42.jpg" alt="Ecole 42">
         <section>
           <h2>Ecole 42</h2>
@@ -96,7 +95,7 @@
           <a href="https://www.42.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Ecole normale supérieure">
+            <section class="responsive" id="Ecole_normale_supérieure">
         <img src="./img/ens.jpg" alt="Ecole normale supérieure">
         <section>
           <h2>Ecole normale supérieure</h2>
@@ -108,7 +107,7 @@
           <a href="http://www.ens.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Insa Toulouse">
+            <section class="responsive" id="Insa_Toulouse">
         <img src="./img/insa_toulouse.jpg" alt="Insa Toulouse">
         <section>
           <h2>Insa Toulouse</h2>
@@ -132,7 +131,7 @@
           <a href="http://www.enseeiht.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Centrale Supélec">
+            <section class="responsive" id="Centrale_Supélec">
         <img src="./img/supelec.jpg" alt="Centrale Supélec">
         <section>
           <h2>Centrale Supélec</h2>
@@ -144,7 +143,7 @@
           <a href="https://www.centralesupelec.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université Pierre et Marie Curie">
+            <section class="responsive" id="Université_Pierre_et_Marie_Curie">
         <img src="./img/univ_curie.jpg" alt="Université Pierre et Marie Curie">
         <section>
           <h2>Université Pierre et Marie Curie</h2>
@@ -180,7 +179,7 @@
           <a href="https://www.isima.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université Paul Sabatier">
+            <section class="responsive" id="Université_Paul_Sabatier">
         <img src="./img/univ_paul_sabatier.jpg" alt="Université Paul Sabatier">
         <section>
           <h2>Université Paul Sabatier</h2>
@@ -192,7 +191,7 @@
           <a href="http://www.univ-tlse3.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Télécom Nancy">
+            <section class="responsive" id="Télécom_Nancy">
         <img src="./img/telecom_nancy.jpg" alt="Télécom Nancy">
         <section>
           <h2>Télécom Nancy</h2>
@@ -216,7 +215,7 @@
           <a href="https://www.epita.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Isae - Supaéro">
+            <section class="responsive" id="Isae_-_Supaéro">
         <img src="./img/isae_supaero.jpg" alt="Isae - Supaéro">
         <section>
           <h2>Isae - Supaéro</h2>
@@ -228,7 +227,7 @@
           <a href="https://www.isae-supaero.fr/fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Insa Lyon">
+            <section class="responsive" id="Insa_Lyon">
         <img src="./img/insa.jpg" alt="Insa Lyon">
         <section>
           <h2>Insa Lyon</h2>
@@ -252,7 +251,7 @@
           <a href="https://www.ensiie.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université Paris Sud">
+            <section class="responsive" id="Université_Paris_Sud">
         <img src="./img/univ_parissud.jpg" alt="Université Paris Sud">
         <section>
           <h2>Université Paris Sud</h2>
@@ -288,7 +287,7 @@
           <a href="https://enseirb-matmeca.bordeaux-inp.fr/fr" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université Claude Bernard">
+            <section class="responsive" id="Université_Claude_Bernard">
         <img src="./img/univ_claude_bernard.jpg" alt="Université Claude Bernard">
         <section>
           <h2>Université Claude Bernard</h2>
@@ -300,7 +299,7 @@
           <a href="https://www.univ-lyon1.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Lille">
+            <section class="responsive" id="Polytech_Lille">
         <img src="./img/poly_lille.jpeg" alt="Polytech Lille">
         <section>
           <h2>Polytech Lille</h2>
@@ -312,7 +311,7 @@
           <a href="http://www.polytech-lille.fr/ecole-d-ingenieurs.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Sorbonne">
+            <section class="responsive" id="Polytech_Sorbonne">
         <img src="./img/poly_sorbonne.jpg" alt="Polytech Sorbonne">
         <section>
           <h2>Polytech Sorbonne</h2>
@@ -324,7 +323,7 @@
           <a href="https://www.polytech.sorbonne-universite.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Paris-Sud">
+            <section class="responsive" id="Polytech_Paris-Sud">
         <img src="./img/poly_parissud.jpeg" alt="Polytech Paris-Sud">
         <section>
           <h2>Polytech Paris-Sud</h2>
@@ -336,7 +335,7 @@
           <a href="http://www.polytech.u-psud.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Nancy">
+            <section class="responsive" id="Polytech_Nancy">
         <img src="./img/poly_nancy.jpg" alt="Polytech Nancy">
         <section>
           <h2>Polytech Nancy</h2>
@@ -348,7 +347,7 @@
           <a href="https://polytech-nancy.univ-lorraine.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Orleans">
+            <section class="responsive" id="Polytech_Orleans">
         <img src="./img/poly_orleans.jpg" alt="Polytech Orleans">
         <section>
           <h2>Polytech Orleans</h2>
@@ -360,7 +359,7 @@
           <a href="http://www.univ-orleans.fr/fr/polytech" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Tours">
+            <section class="responsive" id="Polytech_Tours">
         <img src="./img/poly_tours.jpg" alt="Polytech Tours">
         <section>
           <h2>Polytech Tours</h2>
@@ -372,7 +371,7 @@
           <a href="https://polytech.univ-tours.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Angers">
+            <section class="responsive" id="Polytech_Angers">
         <img src="./img/poly_angers.jpg" alt="Polytech Angers">
         <section>
           <h2>Polytech Angers</h2>
@@ -384,7 +383,7 @@
           <a href="http://www.polytech-angers.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Nantes">
+            <section class="responsive" id="Polytech_Nantes">
         <img src="./img/poly_nantes.jpg" alt="Polytech Nantes">
         <section>
           <h2>Polytech Nantes</h2>
@@ -396,7 +395,7 @@
           <a href="https://polytech.univ-nantes.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Lyon">
+            <section class="responsive" id="Polytech_Lyon">
         <img src="./img/poly_lyon.jpg" alt="Polytech Lyon">
         <section>
           <h2>Polytech Lyon</h2>
@@ -408,7 +407,7 @@
           <a href="https://polytech.univ-lyon1.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Clermont-Ferrand">
+            <section class="responsive" id="Polytech_Clermont-Ferrand">
         <img src="./img/poly_clermont.jpg" alt="Polytech Clermont-Ferrand">
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
@@ -420,7 +419,7 @@
           <a href="http://polytech.univ-bpclermont.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Annecy-Chambéry">
+            <section class="responsive" id="Polytech_Annecy-Chambéry">
         <img src="./img/poly_annecy.jpg" alt="Polytech Annecy-Chambéry">
         <section>
           <h2>Polytech Annecy-Chambéry</h2>
@@ -432,7 +431,7 @@
           <a href="https://www.polytech.univ-smb.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Grenoble">
+            <section class="responsive" id="Polytech_Grenoble">
         <img src="./img/poly_grenoble.jpg" alt="Polytech Grenoble">
         <section>
           <h2>Polytech Grenoble</h2>
@@ -444,7 +443,7 @@
           <a href="https://www.polytech-grenoble.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Montpellier">
+            <section class="responsive" id="Polytech_Montpellier">
         <img src="./img/poly_montpellier.jpg" alt="Polytech Montpellier">
         <section>
           <h2>Polytech Montpellier</h2>
@@ -456,7 +455,7 @@
           <a href="https://www.polytech.umontpellier.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Nice Sophia">
+            <section class="responsive" id="Polytech_Nice_Sophia">
         <img src="./img/poly_nice.jpeg" alt="Polytech Nice Sophia">
         <section>
           <h2>Polytech Nice Sophia</h2>
@@ -468,7 +467,7 @@
           <a href="http://www.polytech.unice.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech Marseille">
+            <section class="responsive" id="Polytech_Marseille">
         <img src="./img/poly_marseille.png" alt="Polytech Marseille">
         <section>
           <h2>Polytech Marseille</h2>
@@ -495,11 +494,10 @@
       </ul>
     </section>
   </footer>
+  <script src="./script/cssmode.js"></script>
+  <script src="./script/geolocation.js"></script>
+  <script src="./script/tabs.js"></script>
+  <script src="script/menuderoulant.js"></script>
 </body>
-<!-- Script JS permettant le passage entre le mode clair et le mode sombre -->
-<script src="./script/cssmode.js"></script>
-<script src="./script/geolocation.js"></script>
-<script src="./script/tabs.js"></script>
-<script src="script/menuderoulant.js"></script>
 
 </html>
