--- a/index_template.html
+++ b/index_template.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>PPP Ingénieur</title>
+  <title>PPP \ Ingénieur</title>
   <link rel="stylesheet" href="./style/ecole_article.css">
   <link rel="stylesheet" href="./style/debouches_article.css">
   <link rel="stylesheet" href="./style/main_header.css">
@@ -30,7 +30,7 @@
   <main>
     <section>
       <header>
-        <h2>Après un DUT, une école d'ingé ?!</h2>
+        <h2>Après un DUT, une école d'ingé ?</h2>
         <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous via le slider juste en dessous !</p>
         <button class="tablinks" onclick="SwitchTab(event, 'EcolesIngesTab')" id="DefaultTab">Écoles d'ingénieurs</button>
         <button class="tablinks" onclick="SwitchTab(event, 'DebouchesTab')">Débouchés</button>
