ADD back to the top button

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       </ul>
     </article>
     <article id="EcolesIngesTab" class="tabcontent">
+      <button onclick="topFunction()" id="ScrollBack" title="Aller en haut de la page">↑</button>
       <div>
         <label class="switch">
         <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
@@ -498,6 +499,7 @@
   <script src="./script/geolocation.js"></script>
   <script src="./script/tabs.js"></script>
   <script src="script/menuderoulant.js"></script>
+  <script src="script/scrollback.js"></script>
 </body>
 
 </html>
