--- a/index.html
+++ b/index.html
@@ -45,34 +45,34 @@
             <li><a href="https://diplomeo.com/licence-informatique">Licence informatique</a></li>
             <li><span class="menu_deroulant">Licence pro métiers de l'informatique</span>
               <ul class="imbrication">
-                                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sécurité des systèmes et des réseaux</a></li>
-                                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
-                                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, développement et test de logiciels</a></li>
-                                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conduite-de-projets">Conduite de projets</a></li>
-                                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">Systèmes d'information et gestion de données</a></li>
-                              </ul>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sécurité des systèmes et des réseaux</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, développement et test de logiciels</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conduite-de-projets">Conduite de projets</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">Systèmes d'information et gestion de données</a></li>
+              </ul>
             </li>
           </ul>
           <li><span class="menu_deroulant">Les écoles d'informatique</span>
-          <ul class="imbrication">
-                        <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
-                        <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
-                        <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
-                        <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
-                      </ul>
-        </li>
-        <li>Entrer dans la vie active</li>
+            <ul class="imbrication">
+              <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
+              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
+              <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
+              <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
+            </ul>
+          </li>
+          <li>Entrer dans la vie active</li>
       </ul>
     </article>
     <article id="EcolesIngesTab" class="tabcontent">
-      <button onclick="topFunction()" id="ScrollBack" title="Aller en haut de la page">↑</button>
+      <button class="ScrollBack" onclick="topFunction()" id="ScrollBack" title="Aller en haut de la page">↑</button>
       <div>
         <label class="switch">
         <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
         <div class="slider round"></div>
       </label>
       </div>
-            <section class="responsive" id="Ensimag">
+      <section class="responsive" id="Ensimag">
         <img src="./img/ensimag.jpg" alt="Ensimag">
         <section>
           <h2>Ensimag</h2>
@@ -84,7 +84,7 @@
           <a href="http://ensimag.grenoble-inp.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Ecole_42">
+      <section class="responsive" id="Ecole_42">
         <img src="./img/42.jpg" alt="Ecole 42">
         <section>
           <h2>Ecole 42</h2>
@@ -96,7 +96,7 @@
           <a href="https://www.42.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Ecole_normale_supérieure">
+      <section class="responsive" id="Ecole_normale_supérieure">
         <img src="./img/ens.jpg" alt="Ecole normale supérieure">
         <section>
           <h2>Ecole normale supérieure</h2>
@@ -108,7 +108,7 @@
           <a href="http://www.ens.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Insa_Toulouse">
+      <section class="responsive" id="Insa_Toulouse">
         <img src="./img/insa_toulouse.jpg" alt="Insa Toulouse">
         <section>
           <h2>Insa Toulouse</h2>
@@ -120,7 +120,7 @@
           <a href="http://www.insa-toulouse.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="ENSEEIHT">
+      <section class="responsive" id="ENSEEIHT">
         <img src="./img/enseeiht.jpg" alt="ENSEEIHT">
         <section>
           <h2>ENSEEIHT</h2>
@@ -132,7 +132,7 @@
           <a href="http://www.enseeiht.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Centrale_Supélec">
+      <section class="responsive" id="Centrale_Supélec">
         <img src="./img/supelec.jpg" alt="Centrale Supélec">
         <section>
           <h2>Centrale Supélec</h2>
@@ -144,7 +144,7 @@
           <a href="https://www.centralesupelec.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université_Pierre_et_Marie_Curie">
+      <section class="responsive" id="Université_Pierre_et_Marie_Curie">
         <img src="./img/univ_curie.jpg" alt="Université Pierre et Marie Curie">
         <section>
           <h2>Université Pierre et Marie Curie</h2>
@@ -156,7 +156,7 @@
           <a href="https://www.sorbonne-universite.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Télécom-Paristech">
+      <section class="responsive" id="Télécom-Paristech">
         <img src="./img/telecom_paristech.jpeg" alt="Télécom-Paristech">
         <section>
           <h2>Télécom-Paristech</h2>
@@ -168,7 +168,7 @@
           <a href="https://www.telecom-paris.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Isima">
+      <section class="responsive" id="Isima">
         <img src="./img/isima.jpg" alt="Isima">
         <section>
           <h2>Isima</h2>
@@ -180,7 +180,7 @@
           <a href="https://www.isima.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université_Paul_Sabatier">
+      <section class="responsive" id="Université_Paul_Sabatier">
         <img src="./img/univ_paul_sabatier.jpg" alt="Université Paul Sabatier">
         <section>
           <h2>Université Paul Sabatier</h2>
@@ -192,7 +192,7 @@
           <a href="http://www.univ-tlse3.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Télécom_Nancy">
+      <section class="responsive" id="Télécom_Nancy">
         <img src="./img/telecom_nancy.jpg" alt="Télécom Nancy">
         <section>
           <h2>Télécom Nancy</h2>
@@ -204,7 +204,7 @@
           <a href="https://telecomnancy.univ-lorraine.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Epita">
+      <section class="responsive" id="Epita">
         <img src="./img/epita.jpg" alt="Epita">
         <section>
           <h2>Epita</h2>
@@ -216,7 +216,7 @@
           <a href="https://www.epita.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Isae_-_Supaéro">
+      <section class="responsive" id="Isae_-_Supaéro">
         <img src="./img/isae_supaero.jpg" alt="Isae - Supaéro">
         <section>
           <h2>Isae - Supaéro</h2>
@@ -228,7 +228,7 @@
           <a href="https://www.isae-supaero.fr/fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Insa_Lyon">
+      <section class="responsive" id="Insa_Lyon">
         <img src="./img/insa.jpg" alt="Insa Lyon">
         <section>
           <h2>Insa Lyon</h2>
@@ -240,7 +240,7 @@
           <a href="https://www.insa-lyon.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="ENSIIE">
+      <section class="responsive" id="ENSIIE">
         <img src="./img/ensiie.gif" alt="ENSIIE">
         <section>
           <h2>ENSIIE</h2>
@@ -252,7 +252,7 @@
           <a href="https://www.ensiie.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université_Paris_Sud">
+      <section class="responsive" id="Université_Paris_Sud">
         <img src="./img/univ_parissud.jpg" alt="Université Paris Sud">
         <section>
           <h2>Université Paris Sud</h2>
@@ -264,7 +264,7 @@
           <a href="https://www.u-psud.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Efrei">
+      <section class="responsive" id="Efrei">
         <img src="./img/efrei.jpg" alt="Efrei">
         <section>
           <h2>Efrei</h2>
@@ -276,7 +276,7 @@
           <a href="https://www.efrei.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Enseirb-Matmeca">
+      <section class="responsive" id="Enseirb-Matmeca">
         <img src="./img/academie_bordeaux.jpg" alt="Enseirb-Matmeca">
         <section>
           <h2>Enseirb-Matmeca</h2>
@@ -288,7 +288,7 @@
           <a href="https://enseirb-matmeca.bordeaux-inp.fr/fr" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Université_Claude_Bernard">
+      <section class="responsive" id="Université_Claude_Bernard">
         <img src="./img/univ_claude_bernard.jpg" alt="Université Claude Bernard">
         <section>
           <h2>Université Claude Bernard</h2>
@@ -300,7 +300,7 @@
           <a href="https://www.univ-lyon1.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Lille">
+      <section class="responsive" id="Polytech_Lille">
         <img src="./img/poly_lille.jpeg" alt="Polytech Lille">
         <section>
           <h2>Polytech Lille</h2>
@@ -312,7 +312,7 @@
           <a href="http://www.polytech-lille.fr/ecole-d-ingenieurs.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Sorbonne">
+      <section class="responsive" id="Polytech_Sorbonne">
         <img src="./img/poly_sorbonne.jpg" alt="Polytech Sorbonne">
         <section>
           <h2>Polytech Sorbonne</h2>
@@ -324,7 +324,7 @@
           <a href="https://www.polytech.sorbonne-universite.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Paris-Sud">
+      <section class="responsive" id="Polytech_Paris-Sud">
         <img src="./img/poly_parissud.jpeg" alt="Polytech Paris-Sud">
         <section>
           <h2>Polytech Paris-Sud</h2>
@@ -336,7 +336,7 @@
           <a href="http://www.polytech.u-psud.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Nancy">
+      <section class="responsive" id="Polytech_Nancy">
         <img src="./img/poly_nancy.jpg" alt="Polytech Nancy">
         <section>
           <h2>Polytech Nancy</h2>
@@ -348,7 +348,7 @@
           <a href="https://polytech-nancy.univ-lorraine.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Orleans">
+      <section class="responsive" id="Polytech_Orleans">
         <img src="./img/poly_orleans.jpg" alt="Polytech Orleans">
         <section>
           <h2>Polytech Orleans</h2>
@@ -360,7 +360,7 @@
           <a href="http://www.univ-orleans.fr/fr/polytech" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Tours">
+      <section class="responsive" id="Polytech_Tours">
         <img src="./img/poly_tours.jpg" alt="Polytech Tours">
         <section>
           <h2>Polytech Tours</h2>
@@ -372,7 +372,7 @@
           <a href="https://polytech.univ-tours.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Angers">
+      <section class="responsive" id="Polytech_Angers">
         <img src="./img/poly_angers.jpg" alt="Polytech Angers">
         <section>
           <h2>Polytech Angers</h2>
@@ -384,7 +384,7 @@
           <a href="http://www.polytech-angers.fr/fr/index.html" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Nantes">
+      <section class="responsive" id="Polytech_Nantes">
         <img src="./img/poly_nantes.jpg" alt="Polytech Nantes">
         <section>
           <h2>Polytech Nantes</h2>
@@ -396,7 +396,7 @@
           <a href="https://polytech.univ-nantes.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Lyon">
+      <section class="responsive" id="Polytech_Lyon">
         <img src="./img/poly_lyon.jpg" alt="Polytech Lyon">
         <section>
           <h2>Polytech Lyon</h2>
@@ -408,7 +408,7 @@
           <a href="https://polytech.univ-lyon1.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Clermont-Ferrand">
+      <section class="responsive" id="Polytech_Clermont-Ferrand">
         <img src="./img/poly_clermont.jpg" alt="Polytech Clermont-Ferrand">
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
@@ -420,7 +420,7 @@
           <a href="http://polytech.univ-bpclermont.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Annecy-Chambéry">
+      <section class="responsive" id="Polytech_Annecy-Chambéry">
         <img src="./img/poly_annecy.jpg" alt="Polytech Annecy-Chambéry">
         <section>
           <h2>Polytech Annecy-Chambéry</h2>
@@ -432,7 +432,7 @@
           <a href="https://www.polytech.univ-smb.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Grenoble">
+      <section class="responsive" id="Polytech_Grenoble">
         <img src="./img/poly_grenoble.jpg" alt="Polytech Grenoble">
         <section>
           <h2>Polytech Grenoble</h2>
@@ -444,7 +444,7 @@
           <a href="https://www.polytech-grenoble.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Montpellier">
+      <section class="responsive" id="Polytech_Montpellier">
         <img src="./img/poly_montpellier.jpg" alt="Polytech Montpellier">
         <section>
           <h2>Polytech Montpellier</h2>
@@ -456,7 +456,7 @@
           <a href="https://www.polytech.umontpellier.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Nice_Sophia">
+      <section class="responsive" id="Polytech_Nice_Sophia">
         <img src="./img/poly_nice.jpeg" alt="Polytech Nice Sophia">
         <section>
           <h2>Polytech Nice Sophia</h2>
@@ -468,7 +468,7 @@
           <a href="http://www.polytech.unice.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-            <section class="responsive" id="Polytech_Marseille">
+      <section class="responsive" id="Polytech_Marseille">
         <img src="./img/poly_marseille.png" alt="Polytech Marseille">
         <section>
           <h2>Polytech Marseille</h2>
@@ -480,7 +480,7 @@
           <a href="https://polytech.univ-amu.fr/" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-          </article>
+    </article>
   </main>
   <footer>
     <section class="apropos">
